# taskhog

./: .gitignore  AGENTS.md  README.md
docs/: README.md  roadmap.md
taskhog-fw/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
taskhog-fw/components/audio/: CMakeLists.txt  audio_beep.c  audio_beep.h  audio_capture.c  audio_capture.h  es8311_codec.c  es8311_codec.h  ring_buffer.c  ring_buffer.h  wav_writer.c  wav_writer.h
taskhog-fw/components/net/: CMakeLists.txt  http_uploader.c  http_uploader.h  sync_engine.c  sync_engine.h  time_sync.c  time_sync.h  wifi_profiles.c  wifi_profiles.h  wifi_sta.c  wifi_sta.h
taskhog-fw/components/ui/: CMakeLists.txt  assets_fonts.c  assets_fonts.h  assets_images.c  assets_images.h  epaper_cfg.h  epaper_drv.c  epaper_drv.h  framebuffer.c  framebuffer.h  gfx.h  screens.c  screens.h  widgets.c  widgets.h
taskhog-fw/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  events.h  m0_audio_gate.c  m0_audio_gate.h  m0_battery_gate.c  m0_battery_gate.h  m0_bringup_gate.c  m0_bringup_gate.h  m0_buttons_gate.c  m0_buttons_gate.h  m0_epaper_gate.c  m0_epaper_gate.h  m0_rtc_gate.c  m0_rtc_gate.h  m0_sdcard_gate.c  m0_sdcard_gate.h  rec_button.c  rec_button.h  rec_session.c  rec_session.h  rec_worker.c  rec_worker.h  state_machine.c  state_machine.h
taskhog-hub/: .env.example  .gitignore  Dockerfile  docker-compose.yml  hub.yaml  pyproject.toml
taskhog-hub/app/: config.py  deps.py  main.py
taskhog-hub/app/api/: admin.py  recordings.py  status.py
taskhog-hub/app/models/: db.py  schemas.py
taskhog-hub/app/obs/: metrics.py
taskhog-hub/app/services/: __init__.py  audio_retention.py  confidence.py  routing_eval.py  structuring.py  todoist.py  todoist_cache.py  todoist_idempotency.py  transcribe.py
taskhog-hub/app/services/llm/: base.py  cloud.py  ollama.py
taskhog-hub/app/worker/: __init__.py  pipeline.py  queue.py
taskhog-hub/scripts/: preload_whisper.py  run_m5_chaos.sh  run_routing_accuracy.py  test_e2e.sh
taskhog-hub/tests/: test_m2_pipeline.py  test_m4_confidence.py  test_m4_llm.py  test_m4_routing_accuracy.py  test_m4_todoist_cache.py  test_m5_audio_retention.py  test_m5_chaos.py  test_m5_hub_recovery.py  test_m5_idempotency.py
taskhog-hub/tests/fixtures/: routing_phrases.json
tools/: gen_assets.py  preview_screens.py
(+65 files in other folders)
