[project]
name = "taskhog-hub"
version = "0.1.0"
description = "Taskhog Hub — Whisper + LLM + Todoist pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "faster-whisper>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
markers = [
    "live: testes que chamam OpenAI real (pytest -m live)",
]
